# qt-desktop_file_encryption-decryption

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  create_appimage.sh  create_appimage_modern.sh  create_dmg.sh
.github/workflows/: build_release.yml  repo-create_doctoc_md.yml
configure/: CMakeLists.txt
docs/: README.md  _config.yml  about.html  architecture.html  architecture.md  atom_v2.1.0.json  cve-repost_macOS.html  cyclonedx_macos.json  depdiscover.json  deployment.md  imprint.html  index.html  index.md  installation.html  links.md  processes.md  sbom_v2.1.0.json  usage_screenshots.html
docs/assets/css/: coding.css  format.css  page-structure.css
i18n/: qt_file_encryption-decryption_de.qm  qt_file_encryption-decryption_de.ts  qt_file_encryption-decryption_en.qm  qt_file_encryption-decryption_en.ts
include/: decrypt_file_dialog.h  encrypt_file_dialog.h  encryption_manager.h  menu_page.h  qaesencryption.h  rz_config.h  template.h
linux/: file_encryption-decryption.desktop
src/: CMakeLists.txt  CMakeLists.txt_Linux  CMakeLists.txt_MacOS  CMakeLists.txt_Windows  decrypt_file_dialog.cpp  decrypt_file_dialog.h  enc_dec_logic.cpp  enc_dec_logic.h  encrypt_file_dialog.cpp  encrypt_file_dialog.h  encryption_manager.cpp  main.cpp  menu_page.cpp  menu_page.h  qaesencryption.cpp  resources.qrc  template.cpp  template.h
src/configure/: rz_config.h.in
src/i18n/: de_DE.qm  de_DE.ts  qt_file_encryption-decryption_de.qm  qt_file_encryption-decryption_de.ts  qt_file_encryption-decryption_en.qm  qt_file_encryption-decryption_en.ts
src/includes/: rz_config.h  rz_snipptes.hpp
src/resources/: Info.plist  file_encryption-decryption.icns
